--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "testgulp",
-  "description": "praktik60",
+  "name": "",
+  "description": "",
   "main": "",
   "authors": [
     "Sprime"
