--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-clean-css": "^2.0.3",
     "gulp-rigger": "^0.5.8",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
