--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "gulp-less": "^3.0.3",
     "gulp-clean-css": "^2.0.3",
     "gulp-rigger": "^0.5.8",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "rimraf": "^2.5.3"
   },
   "dependencies": {
     "imagemin-pngquant": "^4.2.0"
