--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "author": "Sprime",
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-less": "^3.0.3",
-    "gulp-clean-css": "^2.0.3",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-less": "^3.1.0",
+    "gulp-clean-css": "^2.0.12",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-rigger": "^0.5.8",
-    "gulp-uglify": "^1.4.2",
-    "gulp-watch": "^4.3.5",
-    "rimraf": "^2.5.3"
+    "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.9",
+    "rimraf": "^2.5.4"
   },
   "dependencies": {
-    "imagemin-pngquant": "^4.2.0"
+    "imagemin-pngquant": "^5.0.0"
   }
 }
