--- a/package.json
+++ b/package.json
@@ -1,43 +1,69 @@
 {
-  "name": "gulp",
-  "version": "2.0.0",
+  "name": "gulp-project",
+  "version": "2.0.1",
   "license": "MIT",
-  "description": "Template for frontend develop base on Gulp",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Startkit for HTML/CSS/JS pages layout.",
   "author": "Dmitriy Konovalov (Sprime)",
   "homepage": "http://sprime.ru",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sprime/gulp-project.git"
+  },
+  "scripts": {
+    "start": "gulp",
+    "build": "cross-env NODE_ENV=production npm start build"
+  },
   "devDependencies": {
+    "autoprefixer": "^8.1.0",
     "browser-sync": "^2.23.6",
+    "const": "^1.0.0",
+    "cross-env": "^5.1.3",
     "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-changed": "^3.2.0",
-    "gulp-clean-css": "^3.9.2",
+    "fs": "0.0.1-security",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-cheerio": "^0.6.3",
+    "gulp-cleancss": "^0.2.2",
     "gulp-concat": "^2.6.1",
     "gulp-data": "^1.3.1",
+    "gulp-debug": "^3.2.0",
     "gulp-html-beautify": "^1.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
-    "gulp-less": "^3.4.0",
+    "gulp-insert": "^0.5.0",
+    "gulp-less": "^4.0.0",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-plumber": "^1.2.0",
     "gulp-prettify": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
+    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-svgstore": "^6.1.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^5.0.0",
+    "gulp-wait": "0.0.2",
     "gulp.spritesmith": "^6.9.0",
-    "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.1",
-    "marked": "^0.3.12",
-    "nunjucks-markdown": "^2.0.1",
-    "path": "^0.12.7",
-    "require-dir": "^1.0.0",
-    "run-sequence": "^2.2.1"
+    "merge-stream": "^1.0.1",
+    "mkdirp": "^0.5.1",
+    "stylelint": "^9.1.1",
+    "stylelint-declaration-use-variable": "^1.6.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-fs": "^3.0.2"
+  },
+  "bugs": {
+    "url": "https://github.com/Sprime/gulp-project/issues"
+  },
+  "dependencies": {
+    "ismobilejs": "^0.4.1",
+    "jquery": "^3.3.1",
+    "jquery-migrate": "^3.0.1",
+    "magnific-popup": "^1.1.0",
+    "slick-carousel": "^1.8.1",
+    "svg4everybody": "^2.1.9",
+    "swipejs": "^2.2.11"
   }
 }
