add copyedJS config, copy js task, gulp-less#3.5.0

--- a/config.json
+++ b/config.json
@@ -18,6 +18,7 @@
   "addJsAfter": [
     "./src/js/libs.js"
   ],
+  "copiedJs": [],
   "dirs": {
     "srcPath": "./src/",
     "buildPath": "./build/"
